--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "requiredStatusChecks": null,
+  "packageRules": [
+    {
+      "updateTypes": ["major","minor","patch","pin","digest","lockFileMaintenance","rollback","bump"],
+      "automerge": true
+    },
+    {
+      "depTypeList": ["devDependencies"],
+      "automerge": true
+    }
   ]
 }
